--- a/countries/count.css
+++ b/countries/count.css
@@ -8,3 +8,35 @@ section{
     margin: 25px auto;
     border: 10px solid blue;
 }
+
+section:first-of-type{
+    background-image: linear-gradient(90deg, green 33%, white 33%, white 67%, green 67%);
+}
+
+section:nth-of-type(2){
+    background-image: radial-gradient(circle, red 25%, white 20%);
+}
+
+section:nth-of-type(3){
+    background-image: linear-gradient(180deg, red 33%, white 33%, white 40%, blue 40%, blue 67%, white 33%, white 40%, green 65%);
+}
+
+section:nth-of-type(4){
+    background-image: linear-gradient(180deg, green 40%, yellow 33%, yellow 67%, blue 33%);
+}
+
+section:nth-of-type(5){
+    background-image: linear-gradient(90deg, blue 33%, white 33%, white 67%, red 67%);
+}
+
+section:nth-of-type(6){
+    background-image: linear-gradient(90deg, black 33%, yellow 33%, yellow 67%, red 67%);
+}
+
+section:nth-of-type(7){
+    background-image: linear-gradient(180deg, black 40%, red 33%, red 67%, yellow 67%);
+}
+
+section:nth-of-type(8){
+    background-color: red;
+}
