--- a/countries/count.css
+++ b/countries/count.css
@@ -18,7 +18,7 @@ section:nth-of-type(2){
 }
 
 section:nth-of-type(3){
-    background-image: linear-gradient(180deg, red 33%, white 33%, white 40%, blue 40%, blue 67%, white 33%, white 40%, green 65%);
+    background-image: linear-gradient(180deg, red 33%, white 33%, white 40%, blue 40%, blue 67%, white 74, white 79%, green 80%);
 }
 
 section:nth-of-type(4){
