--- a/countries/count.css
+++ b/countries/count.css
@@ -18,7 +18,7 @@ section:nth-of-type(2){
 }
 
 section:nth-of-type(3){
-    background-image: linear-gradient(180deg, red 33%, white 33%, white 40%, blue 40%, blue 67%, white 74, white 79%, green 80%);
+    background-image: linear-gradient(180deg, red 33%, white 33%, white 40%, blue 40%, blue 67%, white 40%, green 65%);
 }
 
 section:nth-of-type(4){
@@ -38,5 +38,20 @@ section:nth-of-type(7){
 }
 
 section:nth-of-type(8){
+    background-image: 
+    url(./star\ 1.png),
+    linear-gradient(180deg, red 33%, yellow 33%, yellow 67%, green 67%);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 150px, 100%;
+         
+}
+
+section:nth-of-type(9){
+    background-image:
+    url(./yellowstar.png), url(./yellowstar2.png), url(./yellowstar3.png), url(./yellowstar4.png), url(./yellowstar5.png);
     background-color: red;
+    background-repeat: no-repeat;
+    background-size: 80px, 20px, 20px, 20px, 20px;
+    background-position: 70px 90PX, 200PX 70px, 230PX 120PX, 200px 170px, 150px 40px, 0;
 }
