--- a/designs/design.css
+++ b/designs/design.css
@@ -77,13 +77,13 @@ section{
 section:nth-of-type(2){
     width: 350px;
     background-color: rgb(46, 44, 44);
-    height: 600px;
-    background-image: url(./chika\ image.jpg);
+    height: 700px;
     background-repeat: no-repeat;
-    background-size: 70px;
+    background-size: 10px;
     background-position: 130px 56px;
     border-radius: 50px 50px, 20px 20px;
     border-image: 100px;
+    align-content: ;
 }
 
 
@@ -101,4 +101,10 @@ section:nth-of-type(2) h2~p input{
     color: white;
     width: 300px;
     margin-left: 2%;
+}
+
+img{
+    /* width: 80px; */
+    border-radius: 70px;
+    
 }
